--- a/index.html
+++ b/index.html
@@ -5,14 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="assets/Favicon.png" type="image/png">
     <title>Alivio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <svg class="logo" aria-label="logo">
+                    <use href="assets/sprites.svg#logo-icon"></use>
+                </svg>
+                <nav class="header__nav">
+                    <ul class="header__nav-list" aria-label="navigation list">
+                        <li class="header__nav-item" aria-label="navigation item">
+                            <a href="#" class="header__nav-link">Why Alivio</a>
+                        </li>
+                        <li class="header__nav-item" aria-label="navigation item">
+                            <a href="#" class="header__nav-link">Solutions</a>
+                        </li>
+                        <li class="header__nav-item">
+                            <a href="#" class="header__nav-link" aria-label="navigation item">Community</a>
+                        </li>
+                        <li class="header__nav-item">
+                            <a href="#" class="header__nav-link" aria-label="navigation item">Pricing</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__actions">
+                    <button type="button" class="btn btn--signin">Sign In</button>
+                    <button type="button" class="btn">Start Trial</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__content">
+                    <h1 class="hero__title">Be aware, Manage well.</h1>
+                    <p class="hero__desc">Everyone experiences stress in different ways.Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                    <button type="button" class="btn">Find Your Way</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
